src/test/deca/context/invalid/same_param_members.deca
// Description:
//    parameters have the same name
//
// Resultats:
//
//
// Historique:
//    cree le 19/01/2025


class A{
    void p(int a, int a) {}
}
{
    A a;
    a.p(1,2);

}